implemented toggle between standard and satellite map modes for listen view.

--- a/Audio-Mobile/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Audio-Mobile/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2P0-lm-Br0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2P0-lm-Br0">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--Audio Mobile Settings View Controller - Settings-->
@@ -1340,8 +1340,23 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="6jY-rf-FxA"/>
+                    <navigationItem key="navigationItem" id="6jY-rf-FxA">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="2fw-e7-9AY">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="1GE-dB-x6w">
+                                <rect key="frame" x="233" y="5" width="71" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Standard">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="mapTypeToggleAction:" destination="sjd-Ir-43v" eventType="touchUpInside" id="XDw-gH-jWz"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="mapTypeToggleB" destination="1GE-dB-x6w" id="4CZ-ib-xdB"/>
                         <outlet property="mapView" destination="lto-B8-am1" id="QG1-Fa-G8M"/>
                         <segue destination="3Ba-8Q-Hcu" kind="push" identifier="MapViewToPlaybackView" id="hzg-3W-ifU"/>
                     </connections>
