--- a/Audio-Mobile/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Audio-Mobile/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2P0-lm-Br0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2P0-lm-Br0">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--Audio Mobile Settings View Controller - Settings-->
@@ -1348,8 +1348,23 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="6jY-rf-FxA"/>
+                    <navigationItem key="navigationItem" id="6jY-rf-FxA">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="K9F-Ms-Pdp">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="i96-h0-Wgi">
+                                <rect key="frame" x="689" y="7" width="63" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Standard">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="mapTypeToggleAction:" destination="sjd-Ir-43v" eventType="touchUpInside" id="5Q9-22-htV"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="mapTypeToggleB" destination="i96-h0-Wgi" id="2Sn-Pw-98n"/>
+                        <outlet property="mapTypeToggleButton" destination="K9F-Ms-Pdp" id="Nbv-P3-FF7"/>
                         <outlet property="mapView" destination="lto-B8-am1" id="QG1-Fa-G8M"/>
                         <segue destination="3Ba-8Q-Hcu" kind="push" identifier="MapViewToPlaybackView" id="hzg-3W-ifU"/>
                     </connections>
@@ -1449,8 +1464,8 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="Ydf-8L-w4Y"/>
+        <segue reference="hzg-3W-ifU"/>
         <segue reference="3Td-hk-7mp"/>
-        <segue reference="44b-Gw-23i"/>
         <segue reference="naa-xd-kVd"/>
     </inferredMetricsTieBreakers>
 </document>
