--- a/Audio-Mobile/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Audio-Mobile/en.lproj/MainStoryboard_iPhone.storyboard
@@ -832,11 +832,19 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S46-7h-pKp">
+                                <rect key="frame" x="252" y="12" width="63" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Standard">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="hintLabel" destination="NHo-Jq-vTk" id="oGl-70-3a4"/>
+                        <outlet property="mapTypeToggleButton" destination="S46-7h-pKp" id="RA8-RU-oXX"/>
                         <outlet property="mapView" destination="V0g-Bs-St2" id="mGC-NY-A4G"/>
                     </connections>
                 </viewController>
