--- a/Audio-Mobile/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Audio-Mobile/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2P0-lm-Br0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2P0-lm-Br0">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--Audio Mobile Settings View Controller - Settings-->
@@ -94,14 +94,14 @@
                                     <action selector="setAudioToPrivate:" destination="uRa-BJ-VTC" eventType="touchUpInside" id="8vi-xo-M4d"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sVe-kW-7se">
-                                <rect key="frame" x="405" y="266" width="249" height="251"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sVe-kW-7se">
+                                <rect key="frame" x="398" y="266" width="256" height="256"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="251" id="6vf-Id-jHa"/>
                                     <constraint firstAttribute="width" constant="249" id="AsQ-7L-oXk"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Button" image="pedestrian_profile_pic.png">
+                                <state key="normal" image="LoadingTexture.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -1458,6 +1458,7 @@
         <image name="Gears.png" width="32" height="32"/>
         <image name="Heart.png" width="32" height="32"/>
         <image name="Hot.png" width="120" height="120"/>
+        <image name="LoadingTexture.png" width="256" height="256"/>
         <image name="Play.png" width="32" height="32"/>
         <image name="Rainy.png" width="120" height="120"/>
         <image name="StartRec.png" width="48" height="48"/>
@@ -1466,7 +1467,6 @@
         <image name="TakePic.png" width="32" height="32"/>
         <image name="UserLibrary.png" width="32" height="32"/>
         <image name="Windy.png" width="120" height="120"/>
-        <image name="pedestrian_profile_pic.png" width="246" height="256"/>
         <image name="record.png" width="32" height="32"/>
         <image name="star.png" width="26" height="26"/>
     </resources>
@@ -1478,7 +1478,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="Ydf-8L-w4Y"/>
         <segue reference="hzg-3W-ifU"/>
-        <segue reference="3Td-hk-7mp"/>
+        <segue reference="K4l-5b-770"/>
         <segue reference="naa-xd-kVd"/>
     </inferredMetricsTieBreakers>
 </document>
