--- a/Audio-Mobile/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Audio-Mobile/en.lproj/MainStoryboard_iPhone.storyboard
@@ -101,7 +101,7 @@
                                     <constraint firstAttribute="width" constant="96" id="AsQ-7L-oXk"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Button" image="pedestrian_profile_pic.png">
+                                <state key="normal">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -1457,7 +1457,6 @@
         <image name="TakePic.png" width="32" height="32"/>
         <image name="UserLibrary.png" width="32" height="32"/>
         <image name="Windy.png" width="120" height="120"/>
-        <image name="pedestrian_profile_pic.png" width="246" height="256"/>
         <image name="record.png" width="32" height="32"/>
         <image name="star.png" width="26" height="26"/>
     </resources>
@@ -1467,9 +1466,9 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="3Td-hk-7mp"/>
-        <segue reference="Ydf-8L-w4Y"/>
         <segue reference="cEC-oD-Uyr"/>
+        <segue reference="K4l-5b-770"/>
+        <segue reference="Ydf-8L-w4Y"/>
         <segue reference="hzg-3W-ifU"/>
     </inferredMetricsTieBreakers>
 </document>
