--- a/Audio-Mobile/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Audio-Mobile/en.lproj/MainStoryboard_iPhone.storyboard
@@ -94,14 +94,14 @@
                                     <action selector="setAudioToPrivate:" destination="uRa-BJ-VTC" eventType="touchUpInside" id="8vi-xo-M4d"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sVe-kW-7se">
-                                <rect key="frame" x="192" y="200" width="96" height="96"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sVe-kW-7se">
+                                <rect key="frame" x="188" y="200" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="96" id="6vf-Id-jHa"/>
                                     <constraint firstAttribute="width" constant="96" id="AsQ-7L-oXk"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal">
+                                <state key="normal" image="LoadingTexture_small.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -1449,6 +1449,7 @@
         <image name="Gears.png" width="32" height="32"/>
         <image name="Heart.png" width="32" height="32"/>
         <image name="Hot.png" width="120" height="120"/>
+        <image name="LoadingTexture_small.png" width="100" height="100"/>
         <image name="Play.png" width="32" height="32"/>
         <image name="Rainy.png" width="120" height="120"/>
         <image name="StartRec.png" width="48" height="48"/>
